--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Chara Project</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Chara Project</title>
 </head>
 <body>
     <h1>Hello World!</h1>
